[project]
name = "acapy-minimal-example-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "acapy-controller[models]>=0.3.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "Apache-2.0"}


[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
